kubernetes/greeter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: exercises
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v1
  namespace: exercises
spec:
  selector:
    app: greeter
    version: v1
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v2
  namespace: exercises
spec:
  selector:
    app: greeter
    version: v2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
