kubernetes/greeter/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: greeter-split
  namespace: exercises
spec:
  parentRefs:
    - name: greeter-svc
      kind: Service
      group: ""
  rules:
    - backendRefs:
        - name: greeter-svc-v1
          port: 8080
          weight: 75
        - name: greeter-svc-v2
          port: 8080
          weight: 25
